fix width of terminal (scrollbar now far right)

--- a/components/shell/terminal.scss
+++ b/components/shell/terminal.scss
@@ -3,4 +3,8 @@
   border: 1px solid black;
   border-left-width: 2px;
   border-radius: 2px;
+
+  > div {
+    width: 100%;
+  }
 }
